--- a/client/app/index.html
+++ b/client/app/index.html
@@ -53,10 +53,10 @@
                 <p>
                     <div style="font-weight: 700" translate>
 
-                        Live Blog 3.90.0
+                        Live Blog 3.90.0-rc8
                     </div>
                     <div translate>
-                        Released on Oct 30, 2024
+                        Released on Nov 6, 2024
                     </div>
                 </p>
                 <p translate>
