--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.90.1-pricing
+                        Live Blog 3.90.2
                     </div>
                     <div translate>
-                        Released on Oct 24, 2024
+                        Released on Dec 23, 2024
                     </div>
                 </p>
                 <p translate>
