--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.90.4
+                        Live Blog 3.90.4-rc6
                     </div>
                     <div translate>
-                        Released on Apr 25, 2025
+                        Released on May 19, 2025
                     </div>
                 </p>
                 <p translate>
