Set right version numbers

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,7 +52,7 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.90.5-rc1
+                        Live Blog 3.90.5
                     </div>
                     <div translate>
                         Released on July 9, 2025
